# klumo

./: .gitignore  Cargo.toml  README.md  install.sh  package.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/beeno/: Cargo.toml
crates/beeno-cli/: Cargo.toml
crates/beeno-cli/src/: main.rs
crates/beeno-cli/tests/: cli.rs
crates/beeno-cli/tests/snapshots/: cli__config_parse_error_stderr.snap  cli__llm_failure_stderr.snap
crates/beeno-compiler/: Cargo.toml
crates/beeno-compiler/src/: lib.rs
crates/beeno-config/: Cargo.toml
crates/beeno-config/src/: lib.rs
crates/beeno-core/: Cargo.toml
crates/beeno-core/src/: lib.rs
crates/beeno-core/tests/: run_flow.rs
crates/beeno-engine/: Cargo.toml
crates/beeno-engine-v8/: Cargo.toml
crates/beeno-engine-v8/src/: lib.rs
crates/beeno-engine/src/: lib.rs
crates/beeno-llm/: Cargo.toml
crates/beeno-llm-ollama/: Cargo.toml
crates/beeno-llm-ollama/src/: lib.rs
crates/beeno-llm-openai/: Cargo.toml
crates/beeno-llm-openai/src/: lib.rs
crates/beeno-llm/src/: lib.rs
crates/beeno/src/: main.rs  runtime.rs
crates/klumo/: Cargo.toml
crates/klumo-cli/: Cargo.toml
crates/klumo-cli/src/: cli_defaults.rs  dispatch.rs  main.rs  project_commands.rs  repl_helpers.rs  repl_web.rs  runtime_context.rs  self_heal.rs
crates/klumo-cli/tests/: cli.rs
crates/klumo-cli/tests/snapshots/: cli__config_parse_error_stderr.snap  cli__llm_failure_stderr.snap
crates/klumo-compiler/: Cargo.toml
crates/klumo-compiler/src/: lib.rs
crates/klumo-config/: Cargo.toml
crates/klumo-config/src/: lib.rs
crates/klumo-core/: Cargo.toml
crates/klumo-core/src/: lib.rs
crates/klumo-core/tests/: run_flow.rs
crates/klumo-engine/: Cargo.toml
crates/klumo-engine-v8/: Cargo.toml
crates/klumo-engine-v8/src/: lib.rs
crates/klumo-engine/src/: lib.rs
crates/klumo-llm/: Cargo.toml
crates/klumo-llm-ollama/: Cargo.toml
crates/klumo-llm-ollama/src/: lib.rs
crates/klumo-llm-openai/: Cargo.toml
crates/klumo-llm-openai/src/: lib.rs
crates/klumo-llm/src/: lib.rs
crates/klumo/src/: main.rs  runtime.rs
docs/: architecture.md
examples/: hello.js  hello.pseudocode
src/: cache.mjs  cli.mjs  executor.mjs  input.mjs  translator.mjs
tests/: README.md
tests/fixtures/: broken_syntax.js
tests/projects/jsr-is-char/: README.md  beeno.json  klumo.json
tests/projects/jsr-is-char/src/: main.js
tests/projects/react-buggy/: README.md  beeno.json  beeno.runtime.json  klumo.json  package.json
tests/projects/react-buggy/buggy-baseline/: beeno.json
tests/projects/react-buggy/buggy-baseline/src/: App.jsx
tests/projects/react-buggy/scripts/: bundle_beeno.sh  bundle_klumo.sh  restore_buggy.sh  run_beeno.sh  run_klumo.sh  run_self_heal_ollama.sh
tests/projects/react-buggy/src/: App.jsx  main.js  main.jsx
tests/smoke/: live_ollama.sh  live_ollama_jsr_project.sh  live_ollama_react_project.sh  offline.sh  offline_repl.sh  offline_self_heal.sh
