[package]
name = "beeno"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "beeno"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
beeno-config = { path = "../beeno-config" }
beeno-compiler = { path = "../beeno-compiler" }
beeno-core = { path = "../beeno-core" }
beeno-engine = { path = "../beeno-engine" }
beeno-engine-v8 = { path = "../beeno-engine-v8" }
beeno-llm = { path = "../beeno-llm" }
beeno-llm-ollama = { path = "../beeno-llm-ollama" }
beeno-llm-openai = { path = "../beeno-llm-openai" }
clap.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
insta.workspace = true
predicates.workspace = true
tempfile.workspace = true
