[package]
name = "beeno-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
beeno-llm = { path = "../beeno-llm" }
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
