[package]
name = "beeno-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
beeno-compiler = { path = "../beeno-compiler" }
beeno-engine = { path = "../beeno-engine" }
beeno-llm = { path = "../beeno-llm" }

[dev-dependencies]
tempfile.workspace = true
