[package]
name = "beeno-llm-ollama"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
beeno-llm = { path = "../beeno-llm" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true
