[package]
name = "klumo-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
klumo-llm = { path = "../klumo-llm" }
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true
