[package]
name = "klumo-llm-ollama"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
klumo-llm = { path = "../klumo-llm" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
serde_json.workspace = true
